--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="ph, fotografia, foto, igshotz, canon, igerbsas, portrait, fotografia digital">
+    <meta name="description" content="Me expreso a pesar de todo, a pesar de los demás.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Saira:wght@100;300;500&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/styles.css">
-    <title>INICIO</title>
+    <title>INICIO | Ph Mariana Martinez</title>
 </head>
 <body>
     <div class="grid-container">
