--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Aca vas a poder ver todos mis trabajos">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Saira:wght@100;300;500&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" href="../css/styles.css">
-    <title>GALERIA</title>
+    <title>GALERIA | Ph Mariana Martinez</title>
 </head>
 <body>
 
